# rda-apps-clients

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: README-RDA_APPS_API.md  README.md  README.webserver  ds131.2.json  ds131.2_control_file
python/: README-RDA_APPS_API  README.md  ds131.2.json  ds131.2_control_file  rda-request-manager.py  rdams-client-py2.py  rdams-client.py  rdams-client_cookie_test.py
python/3.x/: rdams-client.py  rdams_client.py  rdams_client_example.ipynb
src/: README.md
src/gdex_api_client/: README.md  gdex_client.py  gdex_client_example.ipynb  request_workflow_example.ipynb
src/gdex_api_client/templates/: README.md  control_file_template  d082000_control_file  d083000_control_file  d083002_control_file  d083003_control_file  d084001_control_file  d084003_control_file  d084004_control_file  d091000_control_file  d093000_control_file  d093001_control_file  d093002_control_file  d094000_control_file  d094001_control_file  d094002_control_file  d113000_control_file  d117000_control_file  d117001_control_file  d117002_control_file  d118000_control_file  d118001_control_file  d131001_control_file  d131002_control_file  d193000_control_file  d232003_control_file  d260001_control_file  d260002_control_file  d260003_control_file  d277000_control_file  d277003_control_file  d277006_control_file  d285003_control_file  d298000_control_file  d316000_control_file  (+18 more)
src/python/: README.md  rdams_client.py  rdams_client_example.ipynb  request_workflow_example.ipynb
test/: README.md  test_rdams_client.py
